--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1 class="title">Srinivasa Prabhat Josyula</h1>
             <p class="section__text__p2">Master's Graduate in Computer Science</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/SrinivasaPrabhatJosyula.pdf')">Download C</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/SrinivasaPrabhatJosyula.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
             <div id="socials-container">
